up test security