@@ -8,13 +8,13 @@ import android.content.Context;
 import android.content.Intent;
 import android.content.IntentFilter;
 import android.net.wifi.ScanResult;
-import android.net.wifi.WifiConfiguration;
-import android.net.wifi.WifiInfo;
+//import android.net.wifi.WifiConfiguration;
+//import android.net.wifi.WifiInfo;
 import android.net.wifi.WifiManager;
 import android.os.Bundle;
 import android.util.Log;
 import android.view.View;
-import android.view.View.OnClickListener;
+//import android.view.View.OnClickListener;
 import android.widget.Button;
 import android.widget.TextView;
 import android.widget.Toast;
@@ -53,7 +53,7 @@ public class WifiInfomation extends Activity {
 						Toast.LENGTH_LONG).show();
 
 				if (view.getId() == R.id.buttonScan) {
-					
+					Log.d(TAG, "onClick() wifi.startScan()");
 					wifi.startScan();
 				}
 			}
@@ -90,7 +90,7 @@ public class WifiInfomation extends Activity {
 		  	 sb = new StringBuilder();
 		  	 List<ScanResult> results = wifi.getScanResults();
 		     for(int i = 0; i < results.size(); i++){
-		  		 sb.append(new Integer(i+1).toString() + ".");
+		  		 sb.append(Integer.valueOf(i + 1).toString() + ".");
 		  		 sb.append((results.get(i)).toString());
 		  		 sb.append("\n");
 		  	 }
